{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 84,
  "lineage": "dddad4ea-9dff-3ef6-a2c2-24245a9b14fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wsc_eip_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdabaeb37b0d0231",
            "domain": "vpc",
            "id": "eipalloc-0cdabaeb37b0d0231",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-12-175-33.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.175.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsc_ec2_vms_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wsc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:internet-gateway/igw-0dcd8657ada8a4f77",
            "id": "igw-0dcd8657ada8a4f77",
            "owner_id": "149651745982",
            "vpc_id": "vpc-080451b63713f0ebd"
          },
          "dependencies": [
            "aws_vpc.wsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wsc_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wsc_prv_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wsc_pub_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:route-table/rtb-0ba22d40a1f0babb9",
            "id": "rtb-0ba22d40a1f0babb9",
            "owner_id": "149651745982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcd8657ada8a4f77",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wsc_pub_sub_rt"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-080451b63713f0ebd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wsc_igw",
            "aws_vpc.wsc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wsc_prv_sub_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wsc_pub_sub_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e30d2d8ea887f107",
            "route_table_id": "rtb-0ba22d40a1f0babb9",
            "subnet_id": "subnet-0377851b5ab0caad8"
          },
          "dependencies": [
            "aws_internet_gateway.wsc_igw",
            "aws_route_table.wsc_pub_sub_rt",
            "aws_subnet.wsc_pub_subnets",
            "aws_vpc.wsc_vpc",
            "data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07172c246a139095b",
            "route_table_id": "rtb-0ba22d40a1f0babb9",
            "subnet_id": "subnet-0d9a0be9a5e446c6d"
          },
          "dependencies": [
            "aws_internet_gateway.wsc_igw",
            "aws_route_table.wsc_pub_sub_rt",
            "aws_subnet.wsc_pub_subnets",
            "aws_vpc.wsc_vpc",
            "data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wsc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-0377851b5ab0caad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0377851b5ab0caad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_pub_sub_0",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_0",
              "Tier": "Public"
            },
            "vpc_id": "vpc-080451b63713f0ebd"
          },
          "dependencies": [
            "aws_vpc.wsc_vpc",
            "data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-0d9a0be9a5e446c6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9a0be9a5e446c6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_pub_sub_1",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_1",
              "Tier": "Public"
            },
            "vpc_id": "vpc-080451b63713f0ebd"
          },
          "dependencies": [
            "aws_vpc.wsc_vpc",
            "data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wsc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:vpc/vpc-080451b63713f0ebd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01546e0d12672c820",
            "default_route_table_id": "rtb-0f7fcd24d8b3d48a7",
            "default_security_group_id": "sg-008d82a002fb36d5d",
            "dhcp_options_id": "dopt-2558724c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080451b63713f0ebd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7fcd24d8b3d48a7",
            "owner_id": "149651745982",
            "tags": {
              "Name": "wsc_vpc"
            },
            "tags_all": {
              "Name": "wsc_vpc"
            }
          }
        }
      ]
    }
  ]
}